Task1/gateways.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = merge({
    "Name" = "${aws_vpc.vpc.tags["Name"]}-VPC-IGW"
  })
}

resource "aws_nat_gateway" "name" {
  vpc_id            = aws_vpc.vpc.id
  availability_mode = "regional"

  tags = merge({
    "Name" = "${aws_vpc.vpc.tags["Name"]}-Nat-Gateway"
  })
}
